--- a/README
+++ b/README
@@ -1,15 +1,5 @@
-MetaBoard allows one to test Artificial Intelligences (AI) over various board
-games. Adding new games is supposed to be easy, and it should be possible to
-implement AIs working on a whole class of games. This program is distributed
-under GPL license.
-
-In order to compile and launch something, just place yourself in the src
-directory and compile what you want. Example with the Chess Launcher:
-
-~ cd src
-~ javac FX/Launcher.java
-~ cd ..
-~ java -cp src FX.Launcher
-
-Contact informations:
-- Fabian Pijcke <fabian.pijcke@gmail.com>
+cd src
+find -iname \*.class -delete
+javac FX/Launcher.java
+cd ..
+java -cp src FX.Launcher
