Added AiTester to the build script

--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 cd src
 find -iname \*.class -delete
 javac FX/Launcher.java
+javac Games/Kalaha/Players/AiTester.java
 cd ..
 java -cp src FX.Launcher
